[package]
name = "rustagram2"
version = "2.0.0"
authors = ["Htet Aung Shine <h@shine.rocks>", "Jan-Erik Rediger <janerik@fnordig.de>"]
description = "Apply instagram filters to your photos."
exclude = ["output"]
license = "Unlicense/MIT"
edition = "2021"
default-run = "rustagram"

[lib]
name = "rustagram"

[dependencies]
image = "0.24.3"
clap = "2.30.0"

[[bin]]
name = "rustagram"
path = "src/main.rs"

[[bin]]
name = "producer"
path = "src/producer.rs"
